--- a/Amazing Prices/Compare plans/task-info.yaml
+++ b/Amazing Prices/Compare plans/task-info.yaml
@@ -558,6 +558,153 @@ files:
           await new Test().runTests()
       }).timeout(30000);
     learner_created: false
+  - name: src/style.css
+    visible: true
+    text: |-
+      body {
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          height: 100%;
+          flex-shrink: 0;
+      }
+      
+      * {
+          font-family: Inter, sans-serif;
+          color: black;
+      }
+      
+      .anchor {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          text-decoration: none;
+      }
+      
+      header, footer {
+          display: flex;
+          align-items: center;
+          height: 5vh;
+          flex-shrink: 0;
+          background: white;
+      }
+      
+      header {
+          border-bottom: 1px solid black;
+          justify-content: space-between;
+      }
+      
+      nav {
+          display: flex;
+          justify-content: space-between;
+          margin-right: 20px;
+      }
+      
+      nav a {
+          margin-left: 16px;
+          margin-right: 16px;
+      }
+      
+      #nav-brand {
+          margin-left: 20px;
+      }
+      
+      footer {
+          border-top: 1px solid black;
+          justify-content: space-around;
+      }
+      
+      main {
+          background: white;
+          height: 80vh;
+      }
+      
+      main > section {
+          margin-left: auto;
+          margin-right: auto;
+      }
+      
+      section:first-child {
+          text-align: center;
+          width: 440px;
+          margin-top: 20px;
+      }
+      section:last-child {
+          margin-top: 40px;
+          display: flex;
+          justify-content: center;
+      }
+      
+      section > h1 {
+          margin: 10px;
+          font-size: 48px;
+      }
+      
+      section > p {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+      }
+      
+      .card {
+          width: 200px;
+          height: 250px;
+          flex-shrink: 0;
+          border-radius: 10px;
+          border: 1px solid black;
+          background: #F5F5F5;
+          margin-left: 40px;
+          margin-right: 40px;
+          text-align: center;
+      }
+      
+      .card-header {
+          border-bottom: 1px solid black;
+      }
+      
+      h4 {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+      }
+      
+      .card-body > h3 {
+          margin: 10px;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+      }
+      
+      .card-body > p {
+          margin: 5px;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+      }
+      
+      .card-body > button {
+          width: 130px;
+          height: 35px;
+          margin-top: 10px;
+          margin-left: auto;
+          margin-right: auto;
+          border-radius: 10px;
+          background: #C0E8FF;
+          text-align: center;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/24337#comment
 status: Unchecked
 record: -1
