--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,14 +3,14 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/27206/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Thu, 09 Nov 2023 12:34:36 UTC"
+update_date: "Fri, 17 Nov 2023 07:38:18 UTC"
 stages:
   - id: 1731
     step: 24335
     is_completed: true
   - id: 1732
     step: 24336
-    is_completed: false
+    is_completed: true
   - id: 1733
     step: 24337
     is_completed: false
