--- a/Amazing Prices/Compare plans/task-info.yaml
+++ b/Amazing Prices/Compare plans/task-info.yaml
@@ -706,5 +706,8 @@ files:
       }
     learner_created: true
 feedback_link: https://hyperskill.org/learn/step/24337#comment
-status: Unchecked
-record: -1
+status: Solved
+feedback:
+  message: Congratulations!
+  time: "Sat, 25 Nov 2023 10:51:08 UTC"
+record: 3
