--- a/Amazing Prices/Responsive for mobiles/task-info.yaml
+++ b/Amazing Prices/Responsive for mobiles/task-info.yaml
@@ -603,6 +603,197 @@ files:
           await new Test().runTests()
       }).timeout(30000);
     learner_created: false
+  - name: src/style.css
+    visible: true
+    text: |-
+      body {
+          margin: 0;
+          padding: 0;
+          width: 100%;
+          height: 100%;
+          flex-shrink: 0;
+      }
+      
+      * {
+          font-family: Inter, sans-serif;
+          color: black;
+      }
+      
+      .anchor {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          text-decoration: none;
+      }
+      
+      header, footer {
+          display: flex;
+          align-items: center;
+          height: 5vh;
+          flex-shrink: 0;
+          background: white;
+      }
+      
+      header {
+          border-bottom: 1px solid black;
+          justify-content: space-between;
+      }
+      
+      nav {
+          display: flex;
+          justify-content: space-between;
+          margin-right: 20px;
+      }
+      
+      nav a {
+          margin-left: 16px;
+          margin-right: 16px;
+      }
+      
+      #nav-brand {
+          margin-left: 20px;
+      }
+      
+      footer {
+          border-top: 1px solid black;
+          justify-content: space-around;
+      }
+      
+      main {
+          background: white;
+          flex-direction: column;
+          align-content: center;
+      }
+      
+      #intro {
+          flex-direction: column;
+          margin: 20px auto;
+          text-align: center;
+          width: 440px;
+      }
+      
+      #intro > h1 {
+          margin: 10px;
+          font-size: 48px;
+      }
+      
+      #price-plans {
+          flex-direction: row;
+          margin: 40px;
+          display: flex;
+          justify-content: center;
+      }
+      
+      section p {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+      }
+      
+      .card {
+          width: 200px;
+          height: 250px;
+          flex-shrink: 0;
+          border-radius: 10px;
+          border: 1px solid black;
+          background: #F5F5F5;
+          margin-left: 40px;
+          margin-right: 40px;
+          text-align: center;
+      }
+      
+      .card-header {
+          border-bottom: 1px solid black;
+      }
+      
+      h4 {
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+      }
+      
+      .card-body > h3 {
+          margin: 10px;
+          font-size: 24px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+      }
+      
+      .card-body > p {
+          margin: 5px;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+      }
+      
+      .card-body > button {
+          width: 130px;
+          height: 35px;
+          margin-top: 10px;
+          margin-left: auto;
+          margin-right: auto;
+          border-radius: 10px;
+          background: #C0E8FF;
+          text-align: center;
+          font-size: 16px;
+          font-style: normal;
+          font-weight: 400;
+          line-height: normal;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+      }
+      
+      #comparison {
+          align-items: center;
+          display: flex;
+          flex-direction: column;
+          margin: 20px auto 100px auto;
+          width: 480px;
+      }
+      
+      h2 {
+          font-size: 32px;
+          font-style: normal;
+          font-weight: 700;
+          line-height: normal;
+          margin: 0;
+          text-align: center;
+      }
+      
+      table {
+          border-radius: 4px;
+          border: 1px solid #B9B9B9;
+          background: #FFF;
+          height: 230px;
+          margin-top: 10px;
+          align-self: stretch;
+      }
+      
+      th,
+      td {
+          border: 1px solid #000;
+          width: 120px;
+          min-height: 35px;
+          flex-shrink: 0;
+          padding-left: 5px;
+          text-align: left;
+      }
+      
+      thead {
+          background: rgba(255, 255, 255, 0.00);
+          height: 35px;
+      }
+    learner_created: true
 feedback_link: https://hyperskill.org/learn/step/24338#comment
-status: Unchecked
+status: Solved
+feedback:
+  message: Well done! You've finished the project. Select a new project on <a href="https://hyperskill.org/projects">Hyperskill</a>
+    to continue learning.
+  time: "Wed, 06 Dec 2023 07:44:46 UTC"
 record: -1
