--- a/course-remote-info.yaml
+++ b/course-remote-info.yaml
@@ -3,7 +3,7 @@ hyperskill_project:
   ide_files: https://cogniterra.org/media/attachments/lesson/27206/additional_files.json
   is_template_based: false
   use_ide: true
-update_date: "Fri, 17 Nov 2023 07:38:18 UTC"
+update_date: "Wed, 06 Dec 2023 07:30:02 UTC"
 stages:
   - id: 1731
     step: 24335
@@ -13,10 +13,10 @@ stages:
     is_completed: true
   - id: 1733
     step: 24337
-    is_completed: false
+    is_completed: true
   - id: 1734
     step: 24338
-    is_completed: false
+    is_completed: true
 topics:
   0:
     - title: Interface elements
